--- a/carro/src/main/resources/templates/gerenciar_fabricantes.html
+++ b/carro/src/main/resources/templates/gerenciar_fabricantes.html
@@ -68,7 +68,7 @@
                 });
             } );
         </script>
-        <center> <a href="http://localhost:8080/">Voltar</a> </center>
+        <center> <a href="https://carrojava.herokuapp.com/">Voltar</a> </center>
     </body>
 </html>
 
